--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>{{title}}</h1>
-<ul>
-    <li *ngFor="let user of users">{{user.userName}}</li>
-</ul>
+<app-nav></app-nav>
+<div class="container" style="margin: 100px">
+    <ul>
+        <li *ngFor="let user of users">{{user.userName}}</li>
+    </ul>
+</div>
