Implemented shallow logout w/ UI element toggle on Nav component.

--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -5,7 +5,7 @@
           <span class="navbar-toggler-icon"></span>
         </button> -->
         <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn">
             <li class="nav-item">
               <a class="nav-link" href="#">Matches</a>
             </li>
@@ -15,8 +15,21 @@
             <li class="nav-item">
               <a class="nav-link">Messages</a>
             </li>
+            <li class="nav-item">
+              <a (click)="logout()" class="nav-link">Logout</a>
+            </li>
           </ul>
-          <form 
+
+          <div class="dropdown" *ngIf="isLoggedIn">
+            <a class="dropdown-toggle text-light">Welcome</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item">Edit Profile</a>
+              <a (click)="logout()" class="dropdown-item">Logout</a>
+            </div>
+          </div>
+
+          <form
+            *ngIf="!isLoggedIn"
             #loginForm="ngForm" 
             (ngSubmit)="login()" 
             class="form-inline mt-2 mt-md-0" 
