--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -20,11 +20,12 @@
             </li>
           </ul>
 
-          <div class="dropdown" *ngIf="isLoggedIn">
-            <a class="dropdown-toggle text-light">Welcome</a>
-            <div class="dropdown-menu">
+          <div dropdown class="dropdown" *ngIf="isLoggedIn">
+            <a dropdownToggle class="dropdown-toggle text-light">Welcome</a>
+            <div *dropdownMenu class="dropdown-menu mt-3">
               <a class="dropdown-item">Edit Profile</a>
-              <a (click)="logout()" class="dropdown-item">Logout</a>
+              <div class="dropdown-divider"></div>
+              <a (click)="logout()" class="dropdown-item">Logout</a>  
             </div>
           </div>
 
