--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -5,7 +5,7 @@
           <span class="navbar-toggler-icon"></span>
         </button> -->
         <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-          <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn">
+          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
             <li class="nav-item">
               <a class="nav-link" href="#">Matches</a>
             </li>
@@ -15,12 +15,9 @@
             <li class="nav-item">
               <a class="nav-link">Messages</a>
             </li>
-            <li class="nav-item">
-              <a (click)="logout()" class="nav-link">Logout</a>
-            </li>
           </ul>
 
-          <div dropdown class="dropdown" *ngIf="isLoggedIn">
+          <div dropdown class="dropdown" *ngIf="accountService.currentUser$| async">
             <a dropdownToggle class="dropdown-toggle text-light">Welcome</a>
             <div *dropdownMenu class="dropdown-menu mt-3">
               <a class="dropdown-item">Edit Profile</a>
@@ -30,7 +27,7 @@
           </div>
 
           <form
-            *ngIf="!isLoggedIn"
+            *ngIf="(accountService.currentUser$ | async) === null"
             #loginForm="ngForm" 
             (ngSubmit)="login()" 
             class="form-inline mt-2 mt-md-0" 
