Added home component w/ landing page & registration scaffolding.

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
-<div class="container" style="margin: 100px">
-    <ul>
+<div class="container content">
+    <app-home></app-home>
+    <!-- <ul>
         <li *ngFor="let user of users">{{user.userName}}</li>
-    </ul>
+    </ul> -->
 </div>
