--- a/Client/src/app/_components/home/home.component.html
+++ b/Client/src/app/_components/home/home.component.html
@@ -11,7 +11,7 @@
     <div *ngIf="registerMode" class="container">
         <div class="row justify-content-center">
             <div class="col-4">
-                <app-register [users]="users" (cancelRegisterClicked)="cancelRegisterMode($event)"></app-register>
+                <app-register (cancelRegisterClicked)="cancelRegisterMode($event)"></app-register>
             </div>
         </div>
     </div>
