--- a/Client/src/app/_components/register/register.component.html
+++ b/Client/src/app/_components/register/register.component.html
@@ -8,12 +8,12 @@
         <div class="form-group">
             <input [(ngModel)]="model.password" class="form-control" type="password" name="password" placeholder="Password*" required>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="faveUser">Favorite User</label>
             <select name="faveUser" id="" class="form-control">
                 <option *ngFor="let user of users" [value]="user.userName">{{user.userName}}</option>
             </select>
-        </div>
+        </div> -->
         <div class="form-group text-center">
             <button type="submit" [disabled]="!registerForm.form.valid" class="btn btn-success mr-2">
                 Save
