--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-nav></app-nav>
 <div class="container content">
-    <app-home></app-home>
-    <!-- <ul>
-        <li *ngFor="let user of users">{{user.userName}}</li>
-    </ul> -->
+    <router-outlet></router-outlet>
 </div>
