--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -5,15 +5,20 @@
           <span class="navbar-toggler-icon"></span>
         </button> -->
         <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
+          <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="accountService.currentUser$ | async">
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Meat Market</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active" >Lists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >DMs</a>
+              </li>
+            </ng-container>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Meat Market</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active" >Lists</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >DMs</a>
+              <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Halp!</a>
             </li>
           </ul>
 
