--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >Find Bae</a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,8 +22,8 @@
             </li>
           </ul>
 
-          <div dropdown class="dropdown" *ngIf="accountService.currentUser$| async">
-            <a dropdownToggle class="dropdown-toggle text-light">Welcome</a>
+          <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
+            <a dropdownToggle class="dropdown-toggle text-light">Welcome {{ user.username | titlecase }}</a>
             <div *dropdownMenu class="dropdown-menu mt-3">
               <a class="dropdown-item">Edit Profile</a>
               <div class="dropdown-divider"></div>
