--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-default">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >Find Bae</a>
+        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >FindBae</a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> -->
