Implemented custom error interceptor

--- a/Client/src/app/_components/errors/test-errors/test-errors.component.html
+++ b/Client/src/app/_components/errors/test-errors/test-errors.component.html
@@ -3,5 +3,5 @@
     <button (click)="get401Error()" class="btn btn-primary mr-3">Test 401 Error</button>
     <button (click)="get404Error()" class="btn btn-primary mr-3">Test 404 Error</button>
     <button (click)="get400Error()" class="btn btn-primary mr-3">Test 400 Error</button>
-    <button (click)="getValidationError()" class="btn btn-primary mr-3">Test Validation Error</button>
+    <button (click)="getValidationError()" class="btn btn-primary mr-3">Test 400 Validation Error</button>
 </ng-container>
