--- a/Client/src/app/_components/errors/not-found/not-found.component.html
+++ b/Client/src/app/_components/errors/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <h2>Oops! That page doesn't exist.</h2>
-    <button class="btn btn-info btn-lg" [routerLink]="['/home']">Return to home</button>
+    <button class="btn btn-info btn-lg" [routerLink]="['/']">Return to home</button>
 </div>
