--- a/Client/src/app/_components/members/member-list/member-list.component.html
+++ b/Client/src/app/_components/members/member-list/member-list.component.html
@@ -1,3 +1,6 @@
-<ul>
-    <li *ngFor="let member of members">{{member.userName}}</li>
-</ul>
+<div class="row">
+    <div class="col-2" *ngFor="let member of members">
+        <app-member-card [member]="member"></app-member-card>
+    </div>
+</div>
+
