--- a/Client/src/app/_components/members/member-card/member-card.component.css
+++ b/Client/src/app/_components/members/member-card/member-card.component.css
@@ -1,3 +1,20 @@
 .card-body {
     background-color: rgba(255,255,255,0.1);
 }
+
+.card:hover img {
+    transform: scale(1.1, 1.1);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+    opacity: 0.8;
+}
+
+.card img {
+    transform: scale(1.0, 1.0);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+}
+
+.card-img-wrapper {
+    overflow: hidden;
+}
