--- a/Client/src/app/_components/members/member-card/member-card.component.css
+++ b/Client/src/app/_components/members/member-card/member-card.component.css
@@ -6,7 +6,7 @@
     transform: scale(1.1, 1.1);
     transition-duration: 500ms;
     transition-timing-function: ease-out;
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 .card img {
@@ -17,4 +17,24 @@
 
 .card-img-wrapper {
     overflow: hidden;
+    position: relative;
+}
+
+.member-icons {
+    position: absolute;
+    bottom: -30%;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+    opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons {
+    bottom: 0;
+    opacity: 1;
+}
+
+.animate {
+    transition: all 0.3s ease-in-out;
 }
