--- a/Client/src/app/_components/members/member-card/member-card.component.html
+++ b/Client/src/app/_components/members/member-card/member-card.component.html
@@ -2,7 +2,7 @@
     <div class="card-img-wrapper">
         <img src="{{member.photoUrl}}" alt="{{member.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
-            <li class="list-inline-item"><button class="btn btn-primary btn-sm"><i class="fa fa-user"></i></button></li>
+            <li class="list-inline-item"><button class="btn btn-primary btn-sm" routerLink='/member/{{member.userName}}' routerLinkActive="router-link-active" ><i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary btn-sm"><i class="fa fa-heart"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary btn-sm"><i class="fa fa-envelope"></i></button></li>
         </ul>
