--- a/Client/src/app/_components/members/member-detail/member-detail.component.html
+++ b/Client/src/app/_components/members/member-detail/member-detail.component.html
@@ -1,8 +1,7 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
-                class="card-img-top img-thumbnail">
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
                 <div>
                     <strong>Location:</strong>
@@ -28,5 +27,27 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col-8">
+        <tabset type="pills" class="member-tabset">
+            <tab heading="About {{member.knownAs}}" customClass="member-tab">
+                <h4>Description</h4>
+                <p>{{member.introduction}}</p>
+                <h4>Looking For</h4>
+                <p>{{member.lookingFor}}</p>
+            </tab>
+            <tab heading="Interests">
+                <h4>Interests</h4>
+                <p>{{member.interests}}</p>
+            </tab>
+            <tab heading="Photos">
+                <ul>
+                    <li *ngFor="let photo of photos">{{photo.url}}</li>
+                </ul>
+            </tab>
+            <tab heading="DMs">
+                <p>DMs will go here</p>
+            </tab>
+        </tabset>
     </div>
 </div>
