--- a/Client/src/app/_components/members/member-detail/member-detail.component.html
+++ b/Client/src/app/_components/members/member-detail/member-detail.component.html
@@ -36,16 +36,14 @@
                 <h4>Looking For</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading="Interests">
+            <tab heading="Interests" customClass="member-tab">
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
             </tab>
-            <tab heading="Photos">
-                <ul>
-                    <li *ngFor="let photo of photos">{{photo.url}}</li>
-                </ul>
+            <tab heading="Photos" customClass="member-tab">
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
             </tab>
-            <tab heading="DMs">
+            <tab heading="DMs" customClass="member-tab">
                 <p>DMs will go here</p>
             </tab>
         </tabset>
