--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -1,59 +1,44 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-default">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >FindBae</a>
+        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active">FindBae</a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> -->
         <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-          <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto">
             <ng-container *ngIf="accountService.currentUser$ | async">
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Meat Market</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active" >Lists</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >DMs</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active">Meat Market</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active">DMs</a>
+                </li>
             </ng-container>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Halp!</a>
+                <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active">Halp!</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/errors']" routerLinkActive="router-link-active" >Test Errors</a>
+                <a class="nav-link" [routerLink]="['/errors']" routerLinkActive="router-link-active">Test Errors</a>
             </li>
-          </ul>
+        </ul>
 
-          <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
+        <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
             <a dropdownToggle class="dropdown-toggle text-light">Welcome {{ user.username | titlecase }}</a>
             <div *dropdownMenu class="dropdown-menu mt-3">
-              <a class="dropdown-item">Edit Profile</a>
-              <div class="dropdown-divider"></div>
-              <a (click)="logout()" class="dropdown-item">Logout</a>  
+                <a class="dropdown-item" routerLink="/member-edit">Edit Profile</a>
+                <div class="dropdown-divider"></div>
+                <a (click)="logout()" class="dropdown-item">Logout</a>
             </div>
-          </div>
+        </div>
 
-          <form
-            *ngIf="(accountService.currentUser$ | async) === null"
-            #loginForm="ngForm" 
-            (ngSubmit)="login()" 
-            class="form-inline mt-2 mt-md-0" 
-            autocomplete="off">
-            <input
-                name="username"
-                [(ngModel)]="model.username"
-                class="form-control mr-sm-2" 
-                type="text" placeholder="Username">
-                
-            <input
-                name="password"
-                [(ngModel)]="model.password"
-                class="form-control mr-sm-2" 
-                type="password" 
-                placeholder="Password">
+        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" (ngSubmit)="login()" class="form-inline mt-2 mt-md-0" autocomplete="off">
+            <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text" placeholder="Username">
+
+            <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password" placeholder="Password">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-          </form>
-        <!-- </div> -->
-    </div> 
-  </nav>
+        </form>
+    </div>
+</nav>
