--- a/Client/src/app/_components/members/member-edit/member-edit.component.html
+++ b/Client/src/app/_components/members/member-edit/member-edit.component.html
@@ -1,2 +1,60 @@
-<p>member-edit works!</p>
-<ng-container *ngIf="member">{{member.knownAs}}</ng-container>
+<div class="row" *ngIf="member">
+    <div class="col-4">
+        <h1>Your Profile</h1>
+    </div>
+    <div class="col-8">
+        <div class="alert alert-info">
+            <p><strong>Heads-up:</strong> You've made profile changes. Unsaved changes will be lost.</p>
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="card">
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
+            <div class="card-body">
+                <div>
+                    <strong>Location:</strong>
+                    <p>{{member.city}}, {{member.country}}</p>
+                </div>
+                <div>
+                    <strong>Age:</strong>
+                    <p>{{member.age}}</p>
+                </div>
+                <div>
+                    <strong>Last Active:</strong>
+                    <p>{{member.lastActive}}</p>
+                </div>
+                <div>
+                    <strong>Member Since:</strong>
+                    <p>{{member.created}}</p>
+                </div>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-success btn-block" title="Save">Save Changes</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <tabset type="pills" class="member-tabset">
+            <tab heading="About" customClass="member-tab">
+                <form action="">
+                    <h4>Description</h4>
+                    <textarea name="introduction" rows="6" [(ngModel)]="member.introduction" class="col-12 form-control"></textarea>
+                    <h4 class="mt-2">Looking For</h4>
+                    <textarea name="lookingFor" rows="6" [(ngModel)]="member.lookingFor" class="col-12 form-control"></textarea>
+                    <h4 class="mt-2">Interests</h4>
+                    <textarea name="interests" rows="6" [(ngModel)]="member.interests" class="col-12 form-control"></textarea>
+                    <h4 class="mt-2">Location:</h4>
+                    <div class="form-inline">
+                        <label for="city">City: </label>
+                        <input name="city" [(ngModel)]="member.city" class="form-control mx-2">
+                        <label for="country">Country: </label>
+                        <input name="country" [(ngModel)]="member.country" class="form-control mx-2">
+                    </div>
+                </form>
+            </tab>
+            <tab heading="Edit Photos" customClass="member-tab">
+                <p>Photo edit</p>
+            </tab>
+        </tabset>
+    </div>
+</div>
