--- a/Client/src/app/_components/members/member-edit/member-edit.component.html
+++ b/Client/src/app/_components/members/member-edit/member-edit.component.html
@@ -53,7 +53,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos" customClass="member-tab">
-                <p>Photo edit</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
