--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -26,7 +26,8 @@
         </ul>
 
         <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
-            <a dropdownToggle class="dropdown-toggle text-light">Welcome {{ user.username | titlecase }}</a>
+            <img src="{{ user.photoUrl }}" alt="{{ user.username }}">
+            <a dropdownToggle class="dropdown-toggle text-light ml-2">Welcome {{ user.username | titlecase }}</a>
             <div *dropdownMenu class="dropdown-menu mt-3">
                 <a class="dropdown-item" routerLink="/member-edit">Edit Profile</a>
                 <div class="dropdown-divider"></div>
