Implemented functionality for setting primary photo

--- a/Client/src/app/_components/members/photo-editor/photo-editor.component.css
+++ b/Client/src/app/_components/members/photo-editor/photo-editor.component.css
@@ -2,6 +2,7 @@ img.img-thumbnail {
     height: 100 px;
     min-width: 100px !important;
     margin-bottom: 2px;
+    border: none;
 }
 
 .nv-file-over {
