--- a/Client/src/app/_components/register/register.component.html
+++ b/Client/src/app/_components/register/register.component.html
@@ -3,13 +3,31 @@
     <hr>
     <div class="container">
         <div class="form-group">
-            <input formControlName="username" class="form-control" type="text" placeholder="Username*" required>
+            <input [class.is-invalid]="registerForm.get('username').errors && registerForm.get('username').touched" formControlName="username" class="form-control" type="text" placeholder="Username*" required>
+            <div class="invalid-feedback">
+                Username is required
+            </div>
         </div>
         <div class="form-group">
-            <input formControlName="password" class="form-control" type="password" placeholder="Password*" required>
+            <input [class.is-invalid]="registerForm.get('password').errors && registerForm.get('password').touched" formControlName="password" class="form-control" type="password" placeholder="Password*" required>
+            <div *ngIf="registerForm.get('password').hasError('required')" class="invalid-feedback">
+                Password is required
+            </div>
+            <div *ngIf="registerForm.get('password').hasError('minlength')" class="invalid-feedback">
+                Password needs to be at least 8 characters long
+            </div>
+            <div *ngIf="registerForm.get('password').hasError('maxlength')" class="invalid-feedback">
+                Password needs to be less than 15 characters long
+            </div>
         </div>
         <div class="form-group">
-            <input formControlName="confirmPassword" class="form-control" type="password" placeholder="Confirm Password*" required>
+            <input [class.is-invalid]="registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched" formControlName="confirmPassword" class="form-control" type="password" placeholder="Confirm Password*" required>
+            <div *ngIf="registerForm.get('confirmPassword').hasError('required')" class="invalid-feedback">
+                Please confirm your password
+            </div>
+            <div *ngIf="registerForm.get('confirmPassword').hasError('isMatching')" class="invalid-feedback">
+                Password and confirm password need to match
+            </div>
         </div>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-success mr-2">
