--- a/Client/src/app/_components/register/register.component.html
+++ b/Client/src/app/_components/register/register.component.html
@@ -2,33 +2,9 @@
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
     <div class="container">
-        <div class="form-group">
-            <input [class.is-invalid]="registerForm.get('username').errors && registerForm.get('username').touched" formControlName="username" class="form-control" type="text" placeholder="Username*" required>
-            <div class="invalid-feedback">
-                Username is required
-            </div>
-        </div>
-        <div class="form-group">
-            <input [class.is-invalid]="registerForm.get('password').errors && registerForm.get('password').touched" formControlName="password" class="form-control" type="password" placeholder="Password*" required>
-            <div *ngIf="registerForm.get('password').hasError('required')" class="invalid-feedback">
-                Password is required
-            </div>
-            <div *ngIf="registerForm.get('password').hasError('minlength')" class="invalid-feedback">
-                Password needs to be at least 8 characters long
-            </div>
-            <div *ngIf="registerForm.get('password').hasError('maxlength')" class="invalid-feedback">
-                Password needs to be less than 15 characters long
-            </div>
-        </div>
-        <div class="form-group">
-            <input [class.is-invalid]="registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched" formControlName="confirmPassword" class="form-control" type="password" placeholder="Confirm Password*" required>
-            <div *ngIf="registerForm.get('confirmPassword').hasError('required')" class="invalid-feedback">
-                Please confirm your password
-            </div>
-            <div *ngIf="registerForm.get('confirmPassword').hasError('isMatching')" class="invalid-feedback">
-                Password and confirm password need to match
-            </div>
-        </div>
+        <app-text-input [formControl]="registerForm.controls['username']" [label]="'Username'"></app-text-input>
+        <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'"></app-text-input>
+        <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-success mr-2">
                 Register
