--- a/Client/src/app/_components/register/register.component.html
+++ b/Client/src/app/_components/register/register.component.html
@@ -16,7 +16,7 @@
                 <input type="radio" value='non-binary' formControlName="gender" class="ml-3"> Non-binary
             </label>
         </div>
-        <app-text-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'Date of Birth'"></app-text-input>
+        <app-date-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'Date of Birth (18+ only)'" [maxDate]="maxDate"></app-date-input>
         <app-text-input [formControl]="registerForm.controls['city']" [label]="'City'"></app-text-input>
         <app-text-input [formControl]="registerForm.controls['country']" [label]="'Country'"></app-text-input>
         <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'">
