--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -27,7 +27,7 @@
 
         <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
             <img src="{{ user.photoUrl || './assets/user.png' }}" alt="{{ user.username }}">
-            <a dropdownToggle class="dropdown-toggle text-light ml-2">Welcome {{ user.username | titlecase }}</a>
+            <a dropdownToggle class="dropdown-toggle text-light ml-2">Welcome {{ user.knownAs | titlecase }}</a>
             <div *dropdownMenu class="dropdown-menu mt-3">
                 <a class="dropdown-item" routerLink="/member-edit">Edit Profile</a>
                 <div class="dropdown-divider"></div>
