--- a/Client/src/app/_components/members/member-list/member-list.component.html
+++ b/Client/src/app/_components/members/member-list/member-list.component.html
@@ -1,3 +1,36 @@
+<div class="text-center mt-3">
+    <h2>Your matches - {{pagination?.totalItems}} found</h2>
+</div>
+<div class="container mt-3">
+    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="form-group">
+            <label for="minAge">Age from: </label>
+            <input 
+                type="number" 
+                class="form-control form-control-sm ml-1" 
+                style="width: 70px"
+                name="minAge" 
+                [(ngModel)]="userParams.minAge">
+        </div>
+        <div class="form-group px-2">
+            <label for="minAge">Age to: </label>
+            <input 
+                type="number" 
+                class="form-control form-control-sm ml-1" 
+                style="width: 70px"
+                name="maxAge" 
+                [(ngModel)]="userParams.maxAge">
+        </div>
+        <div class="form-group px-2">
+            <label for="gender">Show: </label>
+            <select name="gender" style="width: 170px" [(ngModel)]="userParams.gender" class="form-select form-select-sm ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+            </select>
+        </div>
+        <button class="btn btn-sm btn-primary ml-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-sm btn-info ml-1" type="submit">Clear Filters</button>
+    </form>
+</div>
 <div class="row">
     <div class="col-2" *ngFor="let member of members">
         <app-member-card [member]="member"></app-member-card>
