--- a/Client/src/app/_components/members/member-list/member-list.component.html
+++ b/Client/src/app/_components/members/member-list/member-list.component.html
@@ -29,6 +29,27 @@
         </div>
         <button class="btn btn-sm btn-primary ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-sm btn-info ml-1" type="submit">Clear Filters</button>
+        <div class="form-group pl-5">
+            <label class="pr-2" for="sort">Sort: </label>
+            <div class="btn-group float-right">
+                <button
+                    type="button"
+                    class="btn btn-sm btn-primary"
+                    name="orderBy"
+                    (click)="loadMembers()"
+                    btnRadio="lastActive"
+                    [(ngModel)]="userParams.orderBy">Last Active
+                </button>
+                <button
+                    type="button"
+                    class="btn btn-sm btn-primary"
+                    name="orderBy"
+                    (click)="loadMembers()"
+                    btnRadio="created"
+                    [(ngModel)]="userParams.orderBy">Newest
+                </button>
+            </div>
+        </div>
     </form>
 </div>
 <div class="row">
