--- a/Client/src/app/_components/members/member-messages/member-messages.component.html
+++ b/Client/src/app/_components/members/member-messages/member-messages.component.html
@@ -1,1 +1,40 @@
-<p *ngFor="let m of messages">{{m?.content}}</p>
+<div class="card">
+    <div class="card-body">
+        <div *ngIf="messages?.length === 0">
+            No DMs yet... hit some people up!
+        </div>
+        <ul *ngIf="messages?.length > 0" class="chat">
+            <li *ngFor="let m of messages">
+                <div>
+                    <span class="chat-img float-right">
+                        <img src="{{m.senderPhotoUrl || './assets/user.png'}}" alt="{{m.senderUsername}}" class="rounded-circle">
+                    </span>
+                    <div class="chat-body">
+                        <div class="header">
+                            <small class="text-muted">
+                                <span class="fa fa-clock-o"> {{m.messageSent | timeago}}</span>
+                                <span class="text-danger" *ngIf="!m.dateRead && m.senderUsername !== username">
+                                    (not read)
+                                </span>
+                                <span class="text-success" *ngIf="m.dateRead && m.senderUsername !== username">
+                                    (read {{m.dateRead | timeago}})
+                                </span>
+                            </small>
+                        </div>
+                        <p>{{m.content}}</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="card-footer">
+        <form action="">
+            <div class="input-group">
+                <input type="text" class="form-control input-sm" placeholder="Send a DM">
+                <div class="input-group-append">
+                    <button class="btn btn-primary btn-sm" type="submit"><i class="fa fa-paper-plane"></i></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
