Implementing direct route to DMs tab on Member Profile

--- a/Client/src/app/_components/members/member-detail/member-detail.component.html
+++ b/Client/src/app/_components/members/member-detail/member-detail.component.html
@@ -23,7 +23,7 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary" title="Like"><i class="fa fa-heart"></i></button>
-                    <button class="btn btn-success" title="DM"><i class="fa fa-envelope"></i></button>
+                    <button class="btn btn-success" title="DM" (click)="selectTab(3)"><i class="fa fa-envelope"></i></button>
                 </div>
             </div>
         </div>
