--- a/Client/src/app/_components/members/member-card/member-card.component.html
+++ b/Client/src/app/_components/members/member-card/member-card.component.html
@@ -4,7 +4,14 @@
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item"><button class="btn btn-primary btn-sm" routerLink='/member/{{member.userName}}' routerLinkActive="router-link-active"><i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary btn-sm" (click)="addLike(member)"><i class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary btn-sm"><i class="fa fa-envelope"></i></button></li>
+            <li class="list-inline-item">
+                <button 
+                    class="btn btn-primary btn-sm" 
+                    routerLink="/member/{{member.userName}}" 
+                    [queryParams]="{tab: 3}">
+                    <i class="fa fa-envelope"></i>
+                </button>
+            </li>
         </ul>
     </div>
     <div class="card-body p-1">
