--- a/Client/src/app/_components/messages/messages.component.html
+++ b/Client/src/app/_components/messages/messages.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="row" *ngIf="messages?.length === 0">
-    <h2>None :(</h2>
+    <h4>No DMs to show :(</h4>
 </div>
 
 <div class="row" *ngIf="messages?.length > 0">
@@ -29,6 +29,7 @@
             <th style="width: 20%"></th>
         </tr>
         <tr 
+            [hidden]="isLoading"
             *ngFor="let m of messages" 
             routerLink="{{container === 'Outbox' ? 
                 '/member/' + m.recipientUsername : 
@@ -59,7 +60,7 @@
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !isLoading && !(messages?.length === 0)">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
