Added Admin panel component

--- a/Client/src/app/_components/nav/nav.component.html
+++ b/Client/src/app/_components/nav/nav.component.html
@@ -14,7 +14,7 @@
                 </li>
             </ng-container>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active"><i class="fa fa-life-ring"></i> Halp!</a>
+                <a class="nav-link" [routerLink]="['/admin']" routerLinkActive="router-link-active"><i class="fa fa-life-ring"></i> Admin</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/errors']" routerLinkActive="router-link-active"><i class="fa fa-bug"></i> Test Errors</a>
