--- a/Client/src/app/_components/members/member-detail/member-detail.component.html
+++ b/Client/src/app/_components/members/member-detail/member-detail.component.html
@@ -47,7 +47,7 @@
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
             </tab>
             <tab heading="DMs" customClass="member-tab" (selectTab)="onTabActivated($event)">
-                <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+                <app-member-messages [username]="member.userName"></app-member-messages>
             </tab>
         </tabset>
     </div>
