--- a/Client/src/app/_components/members/member-messages/member-messages.component.html
+++ b/Client/src/app/_components/members/member-messages/member-messages.component.html
@@ -3,7 +3,11 @@
         <div *ngIf="(messageService.messageThread$ | async).length === 0">
             No DMs yet... hit some people up!
         </div>
-        <ul *ngIf="(messageService.messageThread$ | async).length > 0" class="chat">
+        <ul #scrollMe
+            style="overflow-y: scroll; height: 500px"
+            [scrollTop]="scrollMe.scrollHeight"
+            *ngIf="(messageService.messageThread$ | async).length > 0" 
+            class="chat">
             <li *ngFor="let m of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
